--- a/app/src/main/res/drawable/grad.xml
+++ b/app/src/main/res/drawable/grad.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:angle="90"
-        android:startColor="#9561a1"
-        android:endColor="#122259"
+        android:angle="180"
+        android:startColor="#ff000000"
+        android:endColor="#124576"
         android:type="linear"/>
 </shape>
