--- a/app/src/main/res/layout/activity_create_post.xml
+++ b/app/src/main/res/layout/activity_create_post.xml
@@ -329,7 +329,7 @@ android:background="@drawable/grad">
                         android:id="@+id/about"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="AndroDocs"
+                        android:text="Shubham"
                         android:textSize="14dp" />
                 </LinearLayout>
             </LinearLayout>
